Fuck those backslashes

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,7 @@ sudo: false
 install:
   - cp -n texlive* /tmp/
   - source /tmp/texlive_install.sh
-  - tlmgr install \
-      koma-script \
-      etoolbox \
-      logreq \
-      biblatex-apa
+  - tlmgr install koma-script etoolbox logreq biblatex-apa
 
 cache:
   directories:
